Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- handle special groups (role:Authenticated and role:Anonymous) consistently
  w.r.t. CPSUSerFolder properties
Bug fixes
~~~~~~~~~
-
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 